--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#vision">Vision</a></li>
-                <li><a href="#joins">Joins</a></li>
+                <li><a href="#joins">Ready?</a></li>
             </ul>
         </nav>
     </header>
@@ -545,7 +545,7 @@
                                 </a>
                             </div>
                             <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 10px;">
-                                <strong style="display: block; margin-bottom: 0.5rem;">📰 Media & Press</strong>
+                                <strong style="display: block; margin-bottom: 0.5rem;">📰 Relations</strong>
                                 <p style="font-size: 0.9rem; opacity: 0.9; margin-bottom: 1rem;">
                                     Media inquiries, interviews, or press coverage? I'm happy to share the story.
                                 </p>
