--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
             <section id="about" class="content-section">
                 <h2 class="section-title">Our Mission</h2>
                 <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto; color: #666;">
-                    <strong>Ak'sara</strong> (meaning "good applications are created from source code composed by characters")
-                    is building Indonesia's digital independence through a comprehensive ecosystem of open-source software tools,
-                    reducing dependency on expensive foreign solutions while fostering local technical expertise.
+                    <strong>Ak'sara</strong>, draws from the Sanskrit word for "character" or "alphabet," which holds a deep connection to Indonesian culture. We believe that just as every story is built from individual letters, the best applications are crafted from well-written code. 
+                    <br>
+                    Our philosophy is simple: we compose, not just code. Like the ancient scripts of the Nusantara archipelago, each line of code is a fundamental character, which, when thoughtfully arranged, forms a powerful instruction that brings visions to life.
                 </p>
 
                 <div class="stats-grid">
@@ -342,6 +342,11 @@
                         <span>Source Vision</span>
                     </div>
                 </div>
+
+                <p style="text-align: center; font-size: 1.2rem; max-width: 800px; margin: 0 auto; color: #666;">
+                <strong>Ak'sara Initiative</strong>  is meant to building Indonesia's digital independence through a comprehensive ecosystem of open-source software tools,
+                    reducing dependency on expensive foreign solutions while fostering local technical expertise.
+                </p>
             </section>
 
             <section id="projects" class="content-section">
