--- a/project/aksara-nocode-planning.html
+++ b/project/aksara-nocode-planning.html
@@ -3139,7 +3139,7 @@ section.cover {
 <h2 id="implementation-timeline">Implementation Timeline</h2>
 <h3 id="development-phases"><strong>Development Phases</strong></h3>
 <div><div>
-<p><strong>Q1 2024: Foundation</strong></p>
+<p><strong>Q1: Foundation</strong></p>
 <ul>
 <li>Complete core platform features</li>
 <li>Launch beta testing program</li>
@@ -3147,7 +3147,7 @@ section.cover {
 <li>Establish development processes</li>
 </ul>
 </div><div>
-<p><strong>Q2 2024: Market Entry</strong></p>
+<p><strong>Q2: Market Entry</strong></p>
 <ul>
 <li>Public launch with freemium model</li>
 <li>Indonesian business template release</li>
@@ -3155,7 +3155,7 @@ section.cover {
 <li>Community building programs</li>
 </ul>
 </div><div>
-<p><strong>Q3 2024: Growth</strong></p>
+<p><strong>Q3: Growth</strong></p>
 <ul>
 <li>Enterprise features development</li>
 <li>Partnership establishment</li>
@@ -3163,7 +3163,7 @@ section.cover {
 <li>International expansion planning</li>
 </ul>
 </div><div>
-<p><strong>Q4 2024: Scale</strong></p>
+<p><strong>Q4: Scale</strong></p>
 <ul>
 <li>Advanced features rollout</li>
 <li>Government pilot programs</li>
