--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             height: 100%;
             display: flex;
             flex-direction: column;
+            justify-content: flex-start;
         }
 
         .project-card:hover {
@@ -166,13 +167,17 @@
         }
 
         .project-card h3 {
-            margin-top: auto;
-        }
-
-        .project-card h3 {
             color: #667eea;
             margin-bottom: 1rem;
             font-size: 1.5rem;
+        }
+
+        .project-card-content {
+            flex-grow: 1;
+        }
+
+        .project-card-actions {
+            margin-top: auto;
         }
 
         .project-status {
@@ -371,11 +376,13 @@
                 </p>
                 <div class="projects-grid">
                     <div class="project-card">
-                        <span class="project-status status-priority">Priority Project</span>
-                        <h3>Aksara IS</h3>
-                        <p><strong>Svelte-based no-code platform</strong></p>
-                        <p>Enable Indonesian businesses to create custom applications without coding expertise. Features drag-and-drop builder, Indonesian language interface, and offline capabilities.</p>
-                        <p><strong>Timeline:</strong> 12-18 months to MVP</p>
+                        <div class="project-card-content">
+                            <span class="project-status status-priority">Priority Project</span>
+                            <h3>Aksara IS</h3>
+                            <p><strong>Svelte-based no-code platform</strong></p>
+                            <p>Enable Indonesian businesses to create custom applications without coding expertise. Features drag-and-drop builder, Indonesian language interface, and offline capabilities.</p>
+                            <p><strong>Timeline:</strong> 12-18 months to MVP</p>
+                        </div>
                         <div class="project-actions">
                             <a href="project/aksara-nocode-planning.html" target="_blank" class="project-btn project-btn-html">
                                 📄 View Docs
@@ -387,10 +394,12 @@
                     </div>
 
                     <div class="project-card">
-                        <span class="project-status status-stable">✅ Now Available</span>
-                        <h3>Aksara Writer</h3>
-                        <p><strong>Modern markdown converter - NOW PUBLISHED!</strong></p>
-                        <p>Indonesian-focused markdown to document converter with VS Code integration. Export to PDF, PPTX, HTML with business templates and Indonesian language support.</p>
+                        <div class="project-card-content">
+                            <span class="project-status status-stable">✅ Now Available</span>
+                            <h3>Aksara Writer</h3>
+                            <p><strong>Modern markdown converter - NOW PUBLISHED!</strong></p>
+                            <p>Indonesian-focused markdown to document converter with VS Code integration. Features 4 professional themes, template insertion, and business templates. Export to PDF, PPTX, HTML.</p>
+                        </div>
                         <div class="project-actions">
                             <a href="https://www.npmjs.com/package/aksara-writer-core" target="_blank" class="project-btn project-btn-primary">
                                 📦 NPM Package
@@ -405,15 +414,18 @@
                         <div style="margin-top: 1rem; padding: 1rem; background: #f8f9fa; border-radius: 8px; border-left: 4px solid #28a745;">
                             <p><strong>🚀 Quick Start:</strong></p>
                             <code style="background: #e9ecef; padding: 0.2rem 0.4rem; border-radius: 4px; font-family: monospace;">npm install -g aksara-writer</code>
+                            <p style="margin-top: 0.5rem; font-size: 0.9rem;"><strong>✨ v0.1.2:</strong> 4 themes, VSCode auto-preview, improved styling</p>
                         </div>
                     </div>
 
                     <div class="project-card">
-                        <span class="project-status status-vision">Phase 3 Project</span>
-                        <h3>MerdekaOS</h3>
-                        <p><strong>Arch Linux-based distribution</strong></p>
-                        <p>Lightweight, Indonesian-optimized operating system for offices and developers. Pre-configured for Indonesian languages and bundled with our software ecosystem.</p>
-                        <p><strong>Timeline:</strong> 12-18 months</p>
+                        <div class="project-card-content">
+                            <span class="project-status status-vision">Phase 3 Project</span>
+                            <h3>MerdekaOS</h3>
+                            <p><strong>Arch Linux-based distribution</strong></p>
+                            <p>Lightweight, Indonesian-optimized operating system for offices and developers. Pre-configured for Indonesian languages and bundled with our software ecosystem.</p>
+                            <p><strong>Timeline:</strong> 12-18 months</p>
+                        </div>
                         <div class="project-actions">
                             <a href="project/merdeka-os-proposal.html" target="_blank" class="project-btn project-btn-html">
                                 📄 View Proposal
@@ -425,11 +437,13 @@
                     </div>
 
                     <div class="project-card">
-                        <span class="project-status status-research">Phase 4 Project</span>
-                        <h3>Personal AI Assistant</h3>
-                        <p><strong>Tauri + Local LLM integration</strong></p>
-                        <p>Offline AI assistance in Bahasa Indonesia, reducing dependency on cloud-based foreign services. Complete privacy-focused design with cultural context awareness.</p>
-                        <p><strong>Timeline:</strong> 18-24 months</p>
+                        <div class="project-card-content">
+                            <span class="project-status status-research">Phase 4 Project</span>
+                            <h3>Personal AI Assistant</h3>
+                            <p><strong>Tauri + Local LLM integration</strong></p>
+                            <p>Offline AI assistance in Bahasa Indonesia, reducing dependency on cloud-based foreign services. Complete privacy-focused design with cultural context awareness.</p>
+                            <p><strong>Timeline:</strong> 18-24 months</p>
+                        </div>
                         <div class="project-actions">
                             <a href="project/personal-ai-proposal.html" target="_blank" class="project-btn project-btn-html">
                                 📄 View Proposal
