--- a/aksara-writer.html
+++ b/aksara-writer.html
@@ -314,7 +314,7 @@
                     <a href="project/aksara-writer-proposal.html" target="_blank" class="btn btn-primary">
                         <i class="fas fa-file-alt"></i> View Proposal
                     </a>
-                    <a href="aksara-witer-llms.txt" target="_blank" class="btn btn-docs">
+                    <a href="aksara-writer-llms.txt" target="_blank" class="btn btn-docs">
                         <i class="fas fa-book"></i> LLM Documentation
                     </a>
                 </div>
