--- a/svelte-app/src/app.html
+++ b/svelte-app/src/app.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="%sveltekit.assets%/ak'sara.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/ak'sara.png" />
 		%sveltekit.head%
 		<style>
 			body {
